Fixed bird picture spacing and sign up spacing

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     display: flex;
     justify-content: flex-end;
     padding-right: 100px;
+    margin-left: auto;
 }
 
 
@@ -79,6 +80,7 @@ body {
     height: 400px;
     width: 500px;
     padding-right: 100px;
+    padding-bottom: 40px;
 }
 
 .paragraph button {
@@ -160,7 +162,8 @@ body {
     margin-left: 170px;
     margin-right: 170px;
     border-radius: 10px;
-    margin-bottom: 38px;
+    margin-bottom: 20px;
+
 
 }
 
@@ -196,7 +199,6 @@ body {
     display: flex;
     background-color: #1F2937;
     justify-content: center;
-
 }
 
 .copyright p {
